# markdown-themes

./: .gitignore  .tmux-markdown-themes.conf  AGENTS.md  CLAUDE.md  HOTKEYS.md  demo-diagrams.md  package-lock.json  package.json  run.sh
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
backend/: go.mod  go.sum  main.go
backend/auth/: token.go
backend/db/: conversations.go
backend/handlers/: beads.go  chat.go  claude.go  files.go  git.go  notepad.go  terminal.go  tts.go
backend/models/: types.go
backend/utils/: files.go
backend/websocket/: filewatcher.go  hub.go
docs/: ai-chat-integration-research.md  architecture.md  mermaid-v11-theme-variables.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ArchiveModal.tsx  ChatBubble.tsx  FileContextMenu.tsx  FilePickerModal.tsx  InlineField.tsx  MarkdownViewer.tsx  MetadataBar.tsx  NavHeader.tsx  NotepadPanel.tsx  ProjectSelector.tsx  PromptNotebook.tsx  Sidebar.tsx  SplitView.tsx  TabBar.tsx  Terminal.tsx  TerminalPanel.test.tsx  TerminalPanel.tsx  ThemeSelector.tsx  Toolbar.tsx  ViewerContainer.tsx
src/context/: AIChatContext.tsx  AppStoreContext.tsx  PageStateContext.tsx  WorkspaceContext.tsx
src/hooks/: useAIChat.ts  useAppStore.ts  useBulkGitOperations.ts  useCurrentConversation.ts  useDiffAutoScroll.ts  useFileFilter.ts  useFileWatcher.ts  useGitDiff.ts  useGitOperations.ts  useMouseSpotlight.ts  useNotepad.ts  useRightPaneTabs.ts  useSplitView.ts  useTabManager.ts  (+4 more)
(+81 files in other folders)
