[package]
name = "markdown-themes"
version = "0.1.0"
description = "A themed markdown viewer for AI-assisted writing"
authors = ["marci"]
edition = "2021"

[lib]
name = "markdown_themes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
